@@ -38,17 +38,19 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Helper methods for writing code action tests.
  *
  * @since 2.0.0
  */
-public class CodeActionUtils {
+public final class CodeActionUtils {
 
     public static final Path RES_DIR = Paths.get("src/test/resources/").toAbsolutePath();
     public static final String NEW = ".new";
+
+    private CodeActionUtils() {
+    }
 
     /**
      * Get codeactions for the provided cursor position in the provided source file.
@@ -82,7 +84,7 @@ public class CodeActionUtils {
                     // Get codeactions for the diagnostic
                     return codeActionManager.codeActions(context).getCodeActions().stream();
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -105,7 +107,7 @@ public class CodeActionUtils {
         Gson gson = new Gson();
         List<CodeActionArgument> codeActionArguments = codeAction.getArguments().stream()
                 .map(arg -> CodeActionArgument.from(gson.toJsonTree(arg)))
-                .collect(Collectors.toList());
+                .toList();
 
         CodeActionExecutionContext executionContext = CodeActionExecutionContextImpl.from(
                 filePath.toUri().toString(),
