@@ -37,18 +37,19 @@ import java.io.IOException;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Common utils that are reused within data-mapper test suits.
  */
-public class DataMapperTestUtils {
+public final class DataMapperTestUtils {
 
-    private static JsonParser parser = new JsonParser();
     private static Path sourcesPath = new File(DataMapperTestUtils.class.getClassLoader().getResource("codeaction")
             .getFile()).toPath();
     private static final LanguageServerContext serverContext = new LanguageServerContextImpl();
     private static final WorkspaceManager workspaceManager = new BallerinaWorkspaceManager(serverContext);
+
+    private DataMapperTestUtils() {
+    }
 
 
     /**
@@ -58,7 +59,7 @@ public class DataMapperTestUtils {
      * @return {@link JsonObject}   Response as Jason Object
      */
     private static JsonObject getResponseJson(String response) {
-        JsonObject responseJson = parser.parse(response).getAsJsonObject();
+        JsonObject responseJson = JsonParser.parseString(response).getAsJsonObject();
         responseJson.remove("id");
         return responseJson;
     }
@@ -87,7 +88,7 @@ public class DataMapperTestUtils {
                 configJsonObject.get("character").getAsInt());
         diags = diags.stream().
                 filter(diag -> PositionUtil.isWithinRange(pos, diag.getRange()))
-                .collect(Collectors.toList());
+                .toList();
         CodeActionContext codeActionContext = new CodeActionContext(diags);
         Range range = new Range(pos, pos);
         String response = TestUtil.getCodeActionResponse(serviceEndpoint, sourcePath.toString(), range,
