@@ -95,12 +95,12 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.StringJoiner;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 /**
  * Generates the Page bClasses for bal packages.
  */
-public class Generator {
+public final class Generator {
 
     private static final String EMPTY_STRING = "";
     private static final String RETURN_PARAM_NAME = "return";
@@ -111,6 +111,9 @@ public class Generator {
     public static final String LISTENER_IMMEDIATE_STOP_METHOD_NAME = "immediateStop";
     public static final String LISTENER_GRACEFUL_STOP_METHOD_NAME = "gracefulStop";
     public static final String DOC_HEADER_PREFIX = "# ";
+
+    private Generator() {
+    }
 
     /**
      * Generate/Set the module constructs model(docerina model) when the syntax tree for the module is given.
@@ -572,13 +575,11 @@ public class Generator {
         }
 
         // Get functions that are not overridden
-        List<Function> functions = includedFunctions.stream().filter(includedFunction ->
+        List<Function> functions = Stream.concat(includedFunctions.stream().filter(includedFunction ->
                 classFunctions
                         .stream()
-                        .noneMatch(objFunction -> objFunction.name.equals(includedFunction.name)))
-                .collect(Collectors.toList());
-
-        functions.addAll(classFunctions);
+                        .noneMatch(objFunction -> objFunction.name.equals(includedFunction.name))),
+                classFunctions.stream()).toList();
 
         if (containsToken(classDefinitionNode.classTypeQualifiers(), SyntaxKind.CLIENT_KEYWORD)) {
             return new Client(name, description, descriptionSections, isDeprecated, fields, functions, isReadOnly,
@@ -689,13 +690,10 @@ public class Generator {
         }
 
         // Get functions that are not overridden
-        List<Function> functions = includedFunctions.stream().filter(includedFunction ->
-                objectFunctions
-                        .stream()
-                        .noneMatch(objFunction -> objFunction.name.equals(includedFunction.name)))
-                .collect(Collectors.toList());
-
-        functions.addAll(objectFunctions);
+        List<Function> functions = Stream.concat(
+                includedFunctions.stream().filter(includedFunction -> objectFunctions.stream()
+                        .noneMatch(objFunction -> objFunction.name.equals(includedFunction.name))),
+                objectFunctions.stream()).toList();
 
         return new BObjectType(objectName, description, descriptionSections, isDeprecated, fields, functions);
     }
@@ -705,7 +703,7 @@ public class Generator {
         for (FunctionType functionType : functionTypes) {
             List<DefaultableVariable> parameters = new ArrayList<>(functionType.paramTypes.stream()
                     .map(type -> new DefaultableVariable(type.name, type.description, false,
-                            type.elementType, "")).collect(Collectors.toList()));
+                            type.elementType, "")).toList());
 
             List<Variable> returnParameters = new ArrayList<>();
             if (functionType.returnType != null) {
@@ -790,7 +788,7 @@ public class Generator {
                           isDeprecated(optionalMetadataNode), isClosed, fields);
     }
 
-    public static List<DefaultableVariable> getDefaultableVariableList(NodeList nodeList,
+    public static List<DefaultableVariable> getDefaultableVariableList(NodeList<?> nodeList,
                                                                        Optional<MetadataNode> optionalMetadataNode,
                                                                        SemanticModel semanticModel, Module module) {
         List<DefaultableVariable> variables = new ArrayList<>();
